amyc/src/test/resources/amyc/parser/failing/ClassDefError3.amy
object ClassDef
  case class Foo(x, y: Int(32)) extends Bar
end ClassDef
